CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(renderdoc-boost)

# SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin) 
# SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

# if (MSVC) 
# 	ADD_DEFINITIONS("/W3") # /W4 is too strict
# 	ADD_DEFINITIONS("-DRENDERDOC_PLATFORM=win32")
# 	ADD_DEFINITIONS("-DRENDERDOC_EXPORTS")
# 	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT /Zi")
# 	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd /Zi")
# else()
# 	ADD_DEFINITIONS("-Wall -std=c++11")
# endif()

MACRO(ADD_FILTER DIR_NAME ALL_SRC)
    FILE(GLOB_RECURSE FILTER_SRC FOLLOW_SYMLINKS ${DIR_NAME}/*.cpp ${DIR_NAME}/*.h)
    SOURCE_GROUP(${DIR_NAME} FILES ${FILTER_SRC})
    SET(${ALL_SRC} ${${ALL_SRC}} ${FILTER_SRC})
ENDMACRO(ADD_FILTER)

ADD_SUBDIRECTORY(src renderdoc-boost)
